fixed spacing on imagefield

--- a/mainapp/static/css/styles.css
+++ b/mainapp/static/css/styles.css
@@ -71,3 +71,7 @@ footer {
 .italic {
     font-style: italic;
 }
+
+div.custom-file {
+    padding-top: 50px;
+}
